# RegEx-to-NFA

./: CMakeLists.txt  Comandos CMake.txt  README.md  main.cpp  output.json  regex.json  test.cpp
otros/: Comandos CMake.txt  Comandos_graphdiz.txt  Estructura proyecto.txt
output/: nfa.dot
test graphviz/: graph.txt  graph2.txt
